--- a/conf/nginx/nginx-site.conf
+++ b/conf/nginx/nginx-site.conf
@@ -4,6 +4,11 @@ server {
     server_name _;
     root /data/htdocs/Esports/public;
 
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
     access_log /data/logs/access.log main;
 
     location ~ \.php {
